--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,16 +1,16 @@
 @font-face {
   font-family: "AvenirNextLTPro";
-  src: url(/assets/fonts/AvenirNextLTPro-Regular.otf);
+  src: url(../assets/fonts/AvenirNextLTPro-Regular.otf);
   font-weight: normal;
 }
 @font-face {
   font-family: "AvenirNextLTPro";
-  src: url(/assets/fonts/AvenirNextLTPro-Demi.otf);
+  src: url(../assets/fonts/AvenirNextLTPro-Demi.otf);
   font-weight: 600;
 }
 @font-face {
   font-family: "AvenirNextLTPro";
-  src: url(/assets/fonts/AvenirNextLTPro-Bold.otf);
+  src: url(../assets/fonts/AvenirNextLTPro-Bold.otf);
   font-weight: bold;
 }
 html,
